[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
